优化升级策略
Commit by Andy.Zhang
Email: ztao8607@gmail.com
