# server/svcconf/config.go
@@ -185,13 +185,31 @@ func DeleteSvcConf(w http.ResponseWriter, r *http.Request) {
 		},
 		ClusterId:   md.ClusterID,
 		Namespace:   scf.Namespace,
-		ServiceName: scf.Name,
+		ServiceName: scf.SvcName,
 		SecretKey:   md.Skey,
 	}
 
 	q.SetDebug(true)
 
 	q.DeleteService()
+
+	/*删除可能存在的升级服务*/
+	for k, _ := range scf.SvcNameBak {
+		q := service.Service{
+			Pub: public.Public{
+				SecretId: md.Sid,
+				Region:   md.Region,
+			},
+			ClusterId:   md.ClusterID,
+			Namespace:   scf.Namespace,
+			ServiceName: k,
+			SecretKey:   md.Skey,
+		}
+
+		q.SetDebug(true)
+
+		q.DeleteService()
+	}
 
 	err = container.DeleteAllContaienrUnderSvc(scf.Name, scf.Namespace)
 	if err != nil {
